TEST_PROGRAMS/INVALID/03/invalid_switch2.go
package main

func f() {
	switch tag {
	default:
		s3()
	case 0, 1, 2, 3:
		s1();
	}
	switch int { //invalid exp
	case x < 0:
		return -x
	default:
		return x
	}

	switch {
	case x < y:
		f1()
	case x < z:
		f2()
	case x == 4:
		f3()
	}
}
